--- a/build.gradle
+++ b/build.gradle
@@ -5,19 +5,32 @@ plugins {
     id 'com.matthewprenger.cursegradle' version '1.4.0'
     id 'com.modrinth.minotaur' version "2.+"
 
-    id 'net.neoforged.gradle' version '[6.0.18,6.2)'
-    id 'org.spongepowered.mixin' version '0.7-SNAPSHOT'
+    id 'net.neoforged.gradle.userdev' version '7.0.97'
 }
 
-java.toolchain.languageVersion = JavaLanguageVersion.of("${java_version}")
-java.withSourcesJar()
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+    withSourcesJar()
+    withJavadocJar()
+}
 
 sourceSets.main.resources.srcDirs += "src/main/generated"
 
 group = 'com.teamcofh'
-archivesBaseName = "${mod_id}"
+base {
+    archivesName = "${mod_id}"
+}
+
 def buildVersion = "${mod_version}." + (System.getenv("BUILD_NUMBER") ?: '0')
 version = "${mc_version}-${buildVersion}"
+println "Starting build of ${archivesBaseName}, Version: ${mod_version}"
+println "Using NeoForge: ${neo_version}, for Minecraft: ${mc_version}"
+
+minecraft {
+    accessTransformers.file file("src/main/resources/META-INF/accesstransformer.cfg")
+}
 
 jarJar.enable()
 
@@ -74,57 +87,44 @@ if (System.getenv('MODRINTH_TOKEN') || project.hasProperty('modrinthToken')) {
     }
 }
 
-minecraft {
-    mappings channel: 'official', version: "${mc_version}"
-    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
-}
-
 processResources {
     filesMatching('META-INF/mods.toml') {
         expand 'file': ['jarVersion': mod_version],
                 'mc_version': mc_version,
-                'forge_version': forge_version,
-                'forge_major_version': forge_version.split('\\.')[0],
+                'neo_version': neo_version,
+                'lang_version': neo_version.split('\\.')[0],
                 'cofh_core_version_range': "[${cofh_core_version.replace(".+", "")},${cofh_core_max_version})",
                 'thermal_core_version_range': "[${thermal_core_version.replace(".+", "")},${thermal_core_max_version})"
     }
 }
 
-configurations {
-    annotationProcessor.extendsFrom minecraft
-}
-
 repositories {
     mavenLocal()
     maven { url 'https://maven.covers1624.net/' }
-    maven { url 'https://maven.tterrag.com/' }
-    maven { url 'https://dvs1.progwml6.com/files/maven/' }
     maven { url 'https://maven.blamejared.com/' }
     maven { url 'https://maven.theillusivec4.top/' }
 }
 
 dependencies {
-    minecraft "net.neoforged:forge:${mc_version}-${neoforge_version}"
+    implementation("net.neoforged:neoforge:${neo_version}")
 
-    implementation fg.deobf("com.teamcofh:cofh_core:${mc_version}-${cofh_core_version}.+")
-    implementation fg.deobf("com.teamcofh:thermal_core:${mc_version}-${thermal_core_version}.+") {
+    implementation("com.teamcofh:cofh_core:1.20.1-${cofh_core_version}.+")
+    implementation("com.teamcofh:thermal_core:1.20.1-${thermal_core_version}.+") {
         jarJar.ranged(it, "[${mc_version}-${thermal_core_version},${mc_version}-${thermal_core_max_version}]")
     }
 
     // compile against the JEI API but do not include it at runtime
-    compileOnly fg.deobf("mezz.jei:jei-${mc_version}-common-api:${jei_version}")
-    compileOnly fg.deobf("mezz.jei:jei-${mc_version}-forge-api:${jei_version}")
+    compileOnly("mezz.jei:jei-${mc_version}-common-api:${jei_version}")
+    compileOnly("mezz.jei:jei-${mc_version}-neoforge-api:${jei_version}")
+    // at runtime, use the full JEI jar for NeoForge
+    runtimeOnly("mezz.jei:jei-${mc_version}-neoforge:${jei_version}")
 
-    // at runtime, use the full JEI
-    runtimeOnly fg.deobf("mezz.jei:jei-${mc_version}-forge:${jei_version}")
-
-    // compileOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}:api")
-    // runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
+    //compileOnly("vazkii.patchouli:Patchouli:${patchouli_version}:api")
+    //runtimeOnly("vazkii.patchouli:Patchouli:${patchouli_version}")
 }
 
-jar {
-    manifest {
-        attributes([
+def commonManifest = {
+    attributes([
                 'Specification-Title'     : "${mod_name}",
                 'Specification-Vendor'    : 'Team CoFH',
                 'Specification-Version'   : "${mc_version}",
@@ -132,18 +132,11 @@ jar {
                 'Implementation-Vendor'   : 'Team CoFH',
                 'Implementation-Version'  : "${mod_version}",
                 'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
-        ])
-    }
-
-    doFirst {
-        exclude 'cofh/thermal/foundation/data/**'
-        exclude '.cache/**'
-    }
+    ])
 }
 
 tasks.register("signJar") {
     dependsOn("jar")
-    dependsOn("reobfJar")
 
     doFirst {
         def args = [:]
@@ -168,6 +161,10 @@ tasks.register("signJar") {
         }
         project.ant.invokeMethod('signjar', args)
     }
+}
+
+tasks.named('jarJar') {
+    // ...
 }
 
 publishing {
@@ -221,22 +218,3 @@ publishing {
         }
     }
 }
-
-jarJar {
-    fromRuntimeConfiguration()
-    dependencies {
-        include(dependency("com.teamcofh:thermal_core"))
-    }
-}
-
-reobf {
-    jarJar {}
-}
-
-afterEvaluate {
-    tasks.jar.finalizedBy tasks.reobfJar
-    tasks.jarJar.finalizedBy tasks.reobfJarJar
-    tasks.reobfJarJar.enabled = true
-}
-
-tasks.build.dependsOn tasks.jarJar
