--- a/gradle.properties
+++ b/gradle.properties
@@ -5,9 +5,8 @@ mod_version=11.0.7
 
 # Platform Properties
 java_version=17
-mc_version=1.20.1
-forge_version=47.1.3
-neoforge_version=47.1.65
+mc_version=1.20.4
+neo_version=20.4.237
 
 # Dependency Properties
 cofh_core_version=11.0.2
@@ -16,7 +15,7 @@ cofh_core_max_version=11.1.0
 thermal_core_version=11.0.7
 thermal_core_max_version=11.1.0
 
-jei_version=15.2.0+
+jei_version=17.3.0+
 
 # Publishing Properties
 
