--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -28,7 +28,7 @@ side = "BOTH"
 [[dependencies.thermal_foundation]]
 modId = "forge"
 mandatory = true
-versionRange = "[${forge_version},)"
+versionRange = "[${neo_version},)"
 ordering = "AFTER"
 side = "BOTH"
 
